--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -3,7 +3,7 @@
     "coc-css": "^1.2.2",
     "coc-eslint": "^1.2.1",
     "coc-json": "^1.2.2",
-    "coc-prettier": "^1.1.3",
+    "coc-prettier": ">=1.1.5",
     "coc-solargraph": "^1.1.2",
     "coc-tsserver": "^1.3.12"
   }
