--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "coc-css": "^1.2.2",
-    "coc-eslint": "^1.2.1",
-    "coc-json": "^1.2.2",
-    "coc-prettier": "^1.1.3",
-    "coc-solargraph": "^1.1.2",
-    "coc-tsserver": "^1.3.12"
+    "coc-eslint": ">=1.2.3",
+    "coc-json": ">=1.2.4",
+    "coc-prettier": ">=1.1.11",
+    "coc-snippets": ">=2.1.13",
+    "coc-solargraph": ">=1.1.3",
+    "coc-tsserver": ">=1.4.8"
   }
 }
