Nerdtree open same tab, syntax from start

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -31,6 +31,8 @@
   "diagnostic.messageTarget": "echo",
   "diagnostic.refreshAfterSave": true,
 
+  //"coc.preferences.enableFloatHighlight": false,
+
   "disable--coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "typescript",
