--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,11 +1,10 @@
 {
   "dependencies": {
-    "coc-css": "^1.2.2",
-    "coc-eslint": ">=1.2.3",
-    "coc-json": ">=1.2.4",
-    "coc-prettier": ">=1.1.11",
-    "coc-snippets": ">=2.1.13",
-    "coc-solargraph": ">=1.1.3",
-    "coc-tsserver": ">=1.4.8"
+    "coc-css": ">=1.2.4",
+    "coc-eslint": ">=1.2.7",
+    "coc-json": ">=1.2.6",
+    "coc-prettier": ">=1.1.14",
+    "coc-solargraph": ">=1.1.6",
+    "coc-tsserver": ">=1.5.2"
   }
 }
