--- a/coc-settings.json
+++ b/coc-settings.json
@@ -19,7 +19,7 @@
   //"solargraph.commandPath": "~/.rbenv/versions/2.6.6/bin/solargraph",
   "solargraph.hover": true,
 
-  "prettier.formatterPriority": 1,
+  //"prettier.formatterPriority": 1,
 
   "diagnostic.errorSign": "🚫",
   "diagnostic.warningSign": "⚠️",
