--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -4,10 +4,10 @@
     "coc-eslint": ">=1.5.8",
     "coc-json": ">=1.6.0",
     "coc-prettier": ">=9.3.1",
-    "coc-solargraph": ">=1.2.4",
     "coc-tsserver": ">=1.11.2",
     "@yaegassy/coc-tailwindcss3": ">=0.4.7"
   },
   "disabled": [],
-  "locked": []
+  "locked": [],
+  "lastUpdate": 1739477688278
 }
